fix: webpack required error in production docusaurus builds (#149)
* implement self bundling for worker

* put back worker wrapping fix

* remove *generated* prefix

* remove gitignore

* further simplify fix

* undo unneeded changes

* linting

* bundle worker with sdk files during cli runtime

* build all api docs

* linting

* fix comment, combine promises, fix url cleanup logic

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,6 +11,10 @@
     },
     "./config": {
       "default": "./config/index.mjs"
+    },
+    "./worker": {
+      "default": "./dist/codeRuntime/worker.js",
+      "types": "./dist/codeRuntime/worker.d.ts"
     }
   },
   "type": "module",
