--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -10,7 +10,7 @@
       "types": "./dist/index.d.ts"
     },
     "./config": {
-      "default": "./config/index.mjs"
+      "default": "./dist/config/index.js"
     },
     "./worker": {
       "default": "./dist/codeRuntime/worker.js",
