Add unified Nextra examples (#171)
* Remove existing nextra examples

* Add merged nextra example site

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "packages/react",
     "packages/shared",
     "examples/docusaurus",
-    "examples/nextra/pokeapi",
-    "examples/nextra/mistral",
+    "examples/nextra",
     "examples/custom/pokeapi",
     "examples/custom/mistral"
   ]
