feat: add playwright integration tests (#177)
* add playwright boilerplate

* add basic set up steps

* create more basic tests

* update dependencies

* switch to new combined specs ui

* clean up tests

* add testing to section content

* add try it now tests

* add section content expansion

* add python code sample test

* add curl code sample

* add section title test

* update package-lock

* fix linting errors

* clean up unused scripts

* formatting

* more formatting

* remove overrides

* clean up readme

* remove home page test

* move e2e package to tests folder

* remove header id, use test-id's

* use playwright config

* create makefile script and CI check

* increase time out for playwright

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "packages/compiler",
     "packages/react",
     "packages/shared",
+    "tests/e2e",
     "examples/docusaurus",
     "examples/nextra",
     "examples/custom"
