--- a/examples/custom/package.json
+++ b/examples/custom/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3005",
+    "dev": "next dev -p 3003",
     "build-api-docs": "docs-md -c speakeasy.mistral.config.mjs && docs-md -c speakeasy.pokeapi.config.mjs",
     "prebuild": "cd ../../ && make build-packages",
     "clean": "rm -rf .next node_modules/.cache out",
     "build": "next build",
-    "start": "next start",
     "lint": "next lint",
-    "serve": "http-server ./out -p 3005"
+    "start": "http-server ./out -p 3003"
   },
   "dependencies": {
+    "@lit-labs/nextjs": "^0.2.4",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.4.5",
