--- a/examples/docusaurus/package.json
+++ b/examples/docusaurus/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "dev": "rm -rf .docusaurus node_modules/.cache && docusaurus start --no-open -p 3008",
-    "start": "http-server build",
+    "dev": "rm -rf .docusaurus node_modules/.cache && docusaurus start --no-open -p 3001",
+    "start": "http-server build -p 3001",
     "build-api-docs": "docs-md -c speakeasy.glean.config.mjs && docs-md -c speakeasy.mistral.config.mjs && docs-md -c speakeasy.pokeapi.config.mjs",
     "clean": "rm -rf .docusaurus node_modules/.cache build",
     "prebuild": "cd ../../ && make build-packages",
