--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "packages/compiler",
     "packages/react",
     "packages/shared",
+    "packages/web-components",
     "tests/e2e",
     "examples/docusaurus",
     "examples/nextra",
