--- a/packages/web-components/tsconfig.json
+++ b/packages/web-components/tsconfig.json
@@ -9,15 +9,23 @@
     "jsx": "react-jsx",
     "experimentalDecorators": true,
     "useDefineForClassFields": false,
-
-    // Unfortunately hono+zod has a compile error on newer versions of TypeScript,
-    // so we have to disable checking/loosen checking on our usage of third party
-    // dependencies
     "skipLibCheck": true,
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
-    "allowJs": true
+    "allowJs": true,
+    "plugins": [
+      {
+        "name": "ts-lit-plugin",
+        "strict": true,
+        "rules": {
+          "no-unknown-tag-name": "error",
+          "no-unknown-event": "error",
+          "no-unknown-slot": "error",
+          "no-unknown-attribute": "error"
+        }
+      }
+    ]
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*.ts"]
 }
