--- a/examples/nextra/package.json
+++ b/examples/nextra/package.json
@@ -9,12 +9,13 @@
     "clean": "rm -rf .next node_modules/.cache out",
     "build": "next build",
     "postbuild": "pagefind --site .next/server/app --output-path out/_pagefind",
-    "start": "http-server out"
+    "start": "http-server out -p 3002"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@lit-labs/nextjs": "^0.2.4",
     "@radix-ui/colors": "^3.0.0",
     "@speakeasy-api/docs-md": "*",
     "@speakeasy-api/docs-md-react": "*",
@@ -26,7 +27,10 @@
     "radix-ui": "^1.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-use-measure": "^2.1.7"
+    "react-use-measure": "^2.1.7",
+    "@lit-labs/ssr-react": "^0.3.0",
+    "@webcomponents/template-shadowroot": "^0.2.1",
+    "imports-loader": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "22.15.3",
