--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@speakeasy-api/docs-md-react",
+  "name": "@speakeasy-api/docs-md-components",
   "version": "0.2.34",
   "author": "Speakeasy",
   "license": "MIT",
-  "description": "React components used with Speakeasy's DocsMD product",
+  "description": "Web components used with Speakeasy's DocsMD product",
   "type": "module",
   "exports": {
     "./docusaurus.css": {
@@ -24,7 +24,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/speakeasy-api/docs-md-react.git"
+    "url": "git+https://github.com/speakeasy-api/docs-md-public.git"
   },
   "homepage": "https://www.speakeasy.com/product/api-docs",
   "scripts": {
@@ -34,37 +34,20 @@
     "prettier": "prettier --config ../../prettier.config.mjs --ignore-path ../../.gitignore \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
     "format": "npm run prettier -- --write",
     "check-formatting": "npm run prettier -- --check",
-    "lint": "eslint \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
-    "storybook": "storybook dev -p 6006 --config-dir ./src/.storybook",
+    "lit-analyze": "lit-analyzer --strict --rules.no-unknown-tag-name error --rules.no-unknown-event error --rules.no-unknown-slot error --rules.no-unknown-attribute error \"src/**/*.{js,ts}\"",
+    "lint": "eslint \"**/*.{js,jsx,mjs,ts,tsx,mts}\" && npm run lit-analyze",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@monaco-editor/react": "^4.7.0",
-    "@speakeasy-api/docs-md-shared": "0.2.34",
-    "@speakeasy-api/docs-md-components": "0.2.34",
     "clsx": "^2.1.1",
-    "jotai": "^2.14.0",
-    "lit": "^3.3.1",
-    "monaco-editor": "^0.53.0",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "react-json-tree": "^0.20.0",
-    "react-use-measure": "^2.1.7"
+    "lit": "^3.3.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.0.1",
-    "@storybook/addon-a11y": "^9.0.12",
-    "@storybook/addon-docs": "^9.0.12",
-    "@storybook/addon-vitest": "^9.0.12",
-    "@storybook/react": "^9.0.12",
-    "@storybook/react-vite": "^9.0.12",
-    "@types/js-yaml": "^4.0.9",
-    "@types/mdx": "^2.0.13",
-    "@types/node": "^22.15.17",
-    "@types/react": "^19.1.6",
+    "@types/react": "^19.2.2",
     "cpx2": "^8.0.0",
     "globals": "^16.3.0",
-    "react": "^19.1.0",
-    "storybook": "^9.0.12",
+    "lit-analyzer": "^2.0.3",
+    "ts-lit-plugin": "^2.0.2",
     "typescript": "^5.8.3"
   }
 }
