--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "rewriteRelativeImportExtensions": true,
     "outDir": "./dist",
     "jsx": "react-jsx",
+    "experimentalDecorators": true,
+    "useDefineForClassFields": false,
 
     // Unfortunately hono+zod has a compile error on newer versions of TypeScript,
     // so we have to disable checking/loosen checking on our usage of third party
