--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@speakeasy-api/docs-md-shared": "0.2.34",
+    "@speakeasy-api/docs-md-components": "0.2.34",
     "clsx": "^2.1.1",
     "jotai": "^2.14.0",
+    "lit": "^3.3.1",
     "monaco-editor": "^0.53.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "react-json-tree": "^0.20.0",
