--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@speakeasy-api/docs-md-react",
-  "version": "0.2.34",
+  "version": "0.2.35",
   "author": "Speakeasy",
   "license": "MIT",
   "description": "React components used with Speakeasy's DocsMD product",
@@ -40,8 +40,8 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
-    "@speakeasy-api/docs-md-shared": "0.2.34",
-    "@speakeasy-api/docs-md-components": "0.2.34",
+    "@speakeasy-api/docs-md-shared": "0.2.35",
+    "@speakeasy-api/docs-md-components": "0.2.35",
     "clsx": "^2.1.1",
     "jotai": "^2.14.0",
     "lit": "^3.3.1",
@@ -63,8 +63,10 @@
     "@types/react": "^19.1.6",
     "cpx2": "^8.0.0",
     "globals": "^16.3.0",
-    "react": "^19.1.0",
     "storybook": "^9.0.12",
     "typescript": "^5.8.3"
+  },
+  "peerDependencies": {
+    "react": "^19.0.0"
   }
 }
