Remove unused overrides (#182)
* Added web component clean command

* Removed first batch of unused overrides

* Removed remaining unused overrides

* More prop cleanup

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -44,7 +44,7 @@
     "util": "^0.12.5"
   },
   "scripts": {
-    "clean": "",
+    "clean": "rm -rf dist",
     "build": "tsc",
     "prettier": "prettier --config ../../prettier.config.mjs --ignore-path ../../.gitignore \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
     "format": "npm run prettier -- --write",
