feat: speed up CI tests (#181)
* consolidate starting and building on CI

* move around tests

* try adding cache to CI

* remove hard-coded port for now

* up workers in CI

* fix wrong port location

* update curl test

* connect packages and e2e runs

* fix workflow restriction

* make e2e run sequentially

* fix: restore PR triggers for e2e tests with workflow_run for main only

- Add back pull_request and merge_group triggers
- Restrict workflow_run trigger to main branch only
- Ensures e2e tests run on PRs and after packages on main

* refactor: make e2e tests sequential with packages workflow

- Convert e2e-tests to a reusable workflow (workflow_call)
- Call e2e-tests from packages workflow after build completes
- Ensures e2e tests always run after packages build with artifacts available
- Removes parallel execution issue on PRs

* combine the e2e and packages workflow into one to share caching.

* implement playwright cache from docs

* fix caching issue

* remove post install script to speed up CI

* try caching nextra and docusaurus builds

* rename to integration from e2e

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "packages/react",
     "packages/shared",
     "packages/web-components",
-    "tests/e2e",
+    "tests/integration",
     "examples/docusaurus",
     "examples/nextra",
     "examples/custom"
