--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -1,15 +1,18 @@
 name: E2E Tests
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-  merge_group:
+  workflow_call:
+    inputs:
+      use-artifacts:
+        description: 'Whether to use artifacts from the packages workflow'
+        required: false
+        type: boolean
+        default: true
+  workflow_dispatch:
 
 jobs:
-  e2e-tests:
-    name: Playwright E2E Tests
+  integration-tests:
+    name: Playwright Integration Tests
     runs-on: ubuntu-latest
 
     steps:
@@ -21,22 +24,39 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "24"
+          cache: "npm"
       - name: Install dependencies
         run: npm ci
-      - name: Build packages
+      - name: Download build artifacts
+        id: download-artifacts
+        if: inputs.use-artifacts
+        uses: actions/download-artifact@v4
+        continue-on-error: true
+        with:
+          name: package-build-artifacts
+      - name: Restore build artifacts
+        if: steps.download-artifacts.outcome == 'success'
+        run: tar -xzf build-artifacts.tar.gz
+      - name: Build packages (if artifacts not available)
+        if: ${{ !inputs.use-artifacts || steps.download-artifacts.outcome != 'success' }}
         run: make build-packages
       # We have to run npm install again to link the newly built compiler binary
       - name: Link workspace binaries
         run: npm install --workspaces
+      - name: Build examples
+        run: |
+          npm run build --workspace examples/docusaurus --ignore-scripts &
+          npm run build --workspace examples/nextra --ignore-scripts &
+          wait
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
-        working-directory: tests/e2e
+        working-directory: tests/integration
       - name: Run Playwright tests
-        run: make test-e2e
+        run: make test-integration
       - name: Upload test results
         if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
-          path: tests/e2e/playwright-report/
+          path: tests/integration/playwright-report/
           retention-days: 30
