--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -43,12 +43,14 @@
     "curl-generator": "^0.4.2",
     "esbuild": "^0.25.10",
     "js-yaml": "^4.1.0",
+    "semver": "^7.5.4",
     "tar": "^7.5.1",
     "zod": "^3.25.56"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.15.17",
+    "@types/semver": "^7.7.1",
     "globals": "^16.3.0",
     "typescript": "^5.8.3"
   }
