ci: make builds for integration tests in parallel (#185)
* fix playwright key issue

* fix restore key

* delete left over file

* remove playwright restore key

* enable matrix builds

* add missing matrix command to npm line

* be able to start different web servers via env var

* improve caching

* improve hash keys

* make even more parallel

* add success summary

* clean up logic in playwright config

* remove caching  for build artifacts

* fix broken server logic

* split up framework more

* remove build packages, fix status check

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "packages/react",
     "packages/shared",
     "packages/web-components",
-    "tests/integration",
+    "tests/integration/docusaurus",
+    "tests/integration/nextra",
     "examples/docusaurus",
     "examples/nextra",
     "examples/custom"
