Python try it now (#187)
* Building wheel files

* Created abstract base class for runtimes

* Wired up try it now

* More wheel plumbing

* Wired up web worker for python

* First draft of working worker

* Wired up events

* Wired up logging

* Bug fix

* Rebuilt examples

* Python support in GA

* Cache pip deps

* Safer way of calling poetry

* Updated test

* Log poetry error

* Better caching

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -12,9 +12,13 @@
     "./config": {
       "default": "./dist/config/index.js"
     },
-    "./worker": {
-      "default": "./dist/typescriptRuntime/worker.js",
-      "types": "./dist/typescriptRuntime/worker.d.ts"
+    "./tsworker": {
+      "default": "./dist/runtimes/typescript/worker.js",
+      "types": "./dist/runtimes/typescript/worker.d.ts"
+    },
+    "./pyworker": {
+      "default": "./dist/runtimes/python/worker.js",
+      "types": "./dist/runtimes/python/worker.d.ts"
     }
   },
   "type": "module",
@@ -40,6 +44,7 @@
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "pyodide": "^0.29.0",
     "typescript-eslint": "^8.26.1",
     "util": "^0.12.5"
   },
