--- a/.gitattributes
+++ b/.gitattributes
@@ -7,7 +7,9 @@
 *.jpeg filter=lfs diff=lfs merge=lfs -text
 *.avif filter=lfs diff=lfs merge=lfs -text
 *.webp filter=lfs diff=lfs merge=lfs -text
+*.whl filter=lfs diff=lfs merge=lfs -text
 
 # Generated API documentation files
 examples/**/*.mdx linguist-generated=true
+examples/**/*.md linguist-generated=true
 
