--- a/.github/workflows/examples.yaml
+++ b/.github/workflows/examples.yaml
@@ -21,6 +21,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "24"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "pypy3.9"
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v4
@@ -30,6 +34,16 @@ jobs:
       - name: Install dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm ci --ignore-scripts
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - name: Install Python dependencies
+        run: |
+          python -m pip install -r requirements.txt
       - name: Build Packages
         run: make build-packages
       - name: Archive build artifacts
@@ -64,6 +78,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "24"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "pypy3.9"
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - name: Install Python dependencies
+        run: |
+          python -m pip install -r requirements.txt
       - name: Restore node_modules cache
         uses: actions/cache/restore@v4
         with:
